Fixed visibility toggle & vulnerability issue

--- a/static/settings/style.css
+++ b/static/settings/style.css
@@ -387,9 +387,9 @@ body, html{
     width: inherit;
     height: inherit;
     align-items: center;
-    justify-content: flex-end;
-    left: -110px;
+    justify-content: center;
     gap: 10px;
+    transform: translateX(25px);
 }
 
 #cred{
